# TerminaLB

./: CMakeLists.txt  README.md
src/: main.cpp
src/lattice/: boundaryBuffer.cpp  boundaryBuffer.hpp  lattice.cpp  lattice.hpp  parameters.cpp  parameters.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/utils/: utils.cpp  utils.hpp
